--- a/applab-test/style/input/style.scss
+++ b/applab-test/style/input/style.scss
@@ -20,12 +20,54 @@ ul {
 body {
   min-height: 100vh;
 }
+.shareLink {
+  position: fixed;
+  top: 240px;
+  left: 10px;
+  z-index: 999;
+  display: flex;
+  flex-direction: column;
+}
+.shareButton {
+  background: #fff;
+  padding: 14px 16px;
+  border: 0;
+  border-radius: 50%;
+}
 header {
   background: url("../../img/bg-header.png");
   background-color: #454545;
   background-position: center;
   background-repeat: no-repeat;
   height: 1039px;
+  position: relative;
+
+  .scrollAnimation {
+    border: 2px solid #f3f3f3;
+    width: 46px;
+    height: 78px;
+    border-radius: 23px;
+    position: absolute;
+    bottom: 0;
+    left: 45%;
+    .dash {
+      width: 5px;
+      height: 20px;
+      border-radius: 3px;
+      background: #f3f3f3;
+
+      animation: mymove 2s infinite;
+      @keyframes mymove {
+        from {
+          transform: translateY(0px);
+        }
+        to {
+          transform: translateY(44px);
+        }
+      }
+    }
+  }
+
   nav {
     // position: fixed;
     top: 0;
@@ -363,6 +405,9 @@ header {
   .endIcons {
     .clipboard {
       padding-left: 36px;
+      @media only screen and (max-width: 600px) and (min-width: 320px) {
+        padding-left: 0;
+      }
     }
   }
 }
@@ -433,8 +478,11 @@ main {
 
     img {
       display: block;
-      margin: 0 auto 31px;
+      margin: 0 auto 68px;
       max-width: 100%;
+      @media only screen and (max-width: 600px) and (min-width: 320px) {
+        margin: 0 auto 38px;
+      }
     }
     .sectionBorder {
       border-top: 5px solid #7a0a2a;
@@ -443,6 +491,36 @@ main {
         .tab-content {
           .owl-carousel {
             margin: 20px 0;
+            .owl-nav {
+              button {
+                &.owl-next {
+                  position: absolute;
+                  right: 0;
+                  left: auto;
+                  background: aliceblue;
+                  padding: 17px 17px !important;
+                  border: 1px solid #dfdcdc;
+                  border-radius: 50%;
+                  img {
+                    width: 21px;
+                    margin-bottom: 0;
+                  }
+                }
+                &.owl-prev {
+                  position: absolute;
+                  right: 65px;
+                  left: auto;
+                  background: aliceblue;
+                  padding: 17px 17px !important;
+                  border: 1px solid #dfdcdc;
+                  border-radius: 50%;
+                  img {
+                    width: 21px;
+                    margin-bottom: 0;
+                  }
+                }
+              }
+            }
             .owl-item {
               width: 440px !important;
               margin: 15px 15px;
@@ -453,6 +531,19 @@ main {
                 .icon {
                   width: 50px;
                 }
+              }
+
+              @media only screen and (max-width: 600px) and (min-width: 320px) {
+                width: 321px !important;
+                margin: 15px 12px;
+              }
+              @media only screen and (max-width: 1000px) and (min-width: 768px) {
+                width: 303px !important;
+                margin: 15px 15px;
+              }
+              @media only screen and (max-width: 1400px) and (min-width: 1001px) {
+                width: 409px !important;
+                // margin: 15px 15px;
               }
             }
           }
@@ -471,6 +562,11 @@ main {
           display: flex;
           align-items: center;
           margin-top: -58px;
+          @media only screen and (max-width: 600px) and (min-width: 320px) {
+            margin-top: -46px;
+            justify-content: center;
+          }
+
           span {
             font-size: 40px;
             font-weight: 600;
@@ -479,6 +575,9 @@ main {
             .nav-pills {
               align-items: center;
               column-gap: 24px;
+              @media only screen and (max-width: 600px) and (min-width: 320px) {
+                column-gap: 4px;
+              }
               .nav-link {
                 font-size: 24px;
                 font-weight: 500;
@@ -486,12 +585,19 @@ main {
                 border-radius: 77px;
                 padding: 16px 24px;
                 color: #7a0a2a;
+                @media only screen and (max-width: 600px) and (min-width: 320px) {
+                  padding: 10px 15px;
+                  font-size: 16px;
+                }
 
                 &.active {
                   background-color: #7a0a2a;
                   border-radius: 77px;
                   padding: 16px 21px;
                   color: #fff;
+                  @media only screen and (max-width: 600px) and (min-width: 320px) {
+                    padding: 10px 15px;
+                  }
                 }
               }
             }
@@ -515,11 +621,18 @@ main {
         display: flex;
         align-items: center;
         margin-top: -32px;
+        @media only screen and (max-width: 600px) and (min-width: 320px) {
+          margin-top: -19px;
+          justify-content: center;
+        }
         span {
           font-size: 40px;
           font-weight: 600;
           padding: 0 24px;
           background-color: #fff;
+          @media only screen and (max-width: 600px) and (min-width: 320px) {
+            font-size: 22px;
+          }
         }
         .cube {
           @include cube(#7a0a2a, 23px, 23px);
@@ -531,7 +644,10 @@ main {
       div {
         ul {
           list-style: none;
-          margin: 38px 45px 60px;
+          margin: 38px 40px 60px;
+          @media only screen and (max-width: 600px) and (min-width: 320px) {
+            margin: 38px 0px 60px;
+          }
           li {
             display: flex;
             align-items: center;
@@ -543,6 +659,9 @@ main {
             .list-text {
               font-size: 22px;
               font-weight: 500;
+              @media only screen and (max-width: 600px) and (min-width: 320px) {
+                font-size: 16px;
+              }
             }
           }
         }
@@ -563,12 +682,19 @@ main {
           display: flex;
           align-items: center;
           margin-top: -31px;
+          @media only screen and (max-width: 600px) and (min-width: 320px) {
+            margin-top: -18px;
+            justify-content: center;
+          }
           span {
             font-size: 40px;
             font-weight: 600;
             padding: 0 24px;
             background-color: #7a0a2a;
             color: #fff;
+            @media only screen and (max-width: 600px) and (min-width: 320px) {
+              font-size: 22px;
+            }
           }
           .cube {
             @include cube(#fff, 23px, 23px);
@@ -589,6 +715,13 @@ main {
           border-radius: 153px;
           padding: 8px 9px;
           max-width: fit-content;
+          @media only screen and (max-width: 600px) and (min-width: 320px) {
+            border: 0;
+          }
+          @media only screen and (max-width: 1190px) and (min-width: 768px) {
+            padding: 8px 28px;
+          }
+
           .nav-link {
             padding: 1.07rem 2.13rem;
             border-radius: 77px;
@@ -604,6 +737,9 @@ main {
     .contentPortion {
       padding: 75px 0;
       background-color: #f3f3f3;
+      @media only screen and (max-width: 600px) and (min-width: 320px) {
+        padding: 30px 0;
+      }
       .containerSection {
         @include containerSection();
         h2 {
@@ -642,23 +778,62 @@ main {
       border-top: 5px solid #7a0a2a;
       .containerSection {
         @include containerSection();
+        hr {
+          width: 70%;
+          @media only screen and (max-width: 800px) and (min-width: 564px) {
+            width: 40%;
+          }
+          @media (max-width: 563px) {
+            display: none;
+          }
+        }
+        .followbutton {
+          background-color: #7a0a2a;
+          padding: 12px 23px;
+          border: 0;
+          color: #fff;
+          border-radius: 8px;
+        }
         .tab-content {
           .owl-carousel-01 {
             margin: 20px 0;
             .owl-nav {
+              position: relative;
+              top: -255px;
+              @media only screen and (max-width: 600px) and (min-width: 320px) {
+                top: -203px;
+              }
               button {
                 &.owl-next {
                   position: absolute;
-                  right: 0;
+                  right: 18px;
+                  @media only screen and (max-width: 600px) and (min-width: 320px) {
+                    right: 0;
+                  }
+                }
+                &.owl-prev {
+                  position: absolute;
+                  left: -9px;
+                  @media only screen and (max-width: 600px) and (min-width: 320px) {
+                    left: -5px;
+                  }
                 }
               }
             }
+
             .owl-item {
-              width: 421px !important;
+              width: 436px !important;
               margin: 15px 15px;
               border-radius: 10px;
-              box-shadow: 0px 0px 10px #a39d9d;
-              padding: 12px;
+              //   box-shadow: 0px 0px 10px #a39d9d;
+
+              @media only screen and (max-width: 600px) and (min-width: 320px) {
+                width: 315px !important;
+              }
+              @media only screen and (max-width: 1000px) and (min-width: 768px) {
+                width: 333px !important;
+              }
+
               .news-slide {
                 .icon {
                   width: 50px;
@@ -669,6 +844,9 @@ main {
         }
         .nav-pills {
           margin-top: 27px;
+          border: 1px solid #d9d9d9;
+          padding: 7px;
+          border-radius: 77px;
           .nav-link {
             padding: 16px 24px;
             &.active {
@@ -681,11 +859,18 @@ main {
           display: flex;
           align-items: center;
           margin-top: -32px;
+          @media only screen and (max-width: 600px) and (min-width: 320px) {
+            justify-content: center;
+            margin-top: -19px;
+          }
           span {
             font-size: 40px;
             font-weight: 600;
             padding: 0 24px;
             background-color: #fff;
+            @media only screen and (max-width: 600px) and (min-width: 320px) {
+              font-size: 22px;
+            }
             .nav-pills {
               align-items: center;
               column-gap: 24px;
