--- a/BitcodePrime/css/style.css
+++ b/BitcodePrime/css/style.css
@@ -7,6 +7,12 @@
 .owl-dots {
   display: none;
 }
+.hero-section .hero-img {
+  height: 500px;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 4px;
+}
 /* * {
     box-sizing: border-box;
   }
