--- a/applab-test/style/input/style.scss
+++ b/applab-test/style/input/style.scss
@@ -12,18 +12,18 @@ $font-family_1: "Raleway", sans-serif;
 }
 ol,
 ul {
-  padding-left: 0;
+  padding-inline-start: 0;
 }
 .cd__intro {
-  margin-top: 70px;
+  margin-block-start: 70px;
 }
 body {
   min-height: 100vh;
 }
 .shareLink {
   position: fixed;
-  top: 240px;
-  left: 10px;
+  inset-block-start: 240px;
+  inset-inline-start: 10px;
   z-index: 999;
   display: flex;
   flex-direction: column;
@@ -70,8 +70,8 @@ header {
 
   nav {
     // position: fixed;
-    top: 0;
-    left: 0;
+    inset-block-start: 0;
+    inset-inline-start: 0;
     width: 100%;
     height: 100%;
     height: 90px;
@@ -127,8 +127,8 @@ header {
             background-repeat: no-repeat;
             background-position: bottom center;
             padding: 20px 0px 50px;
-            top: 60px;
-            left: 0;
+            inset-block-start: 60px;
+            inset-inline-start: 0;
             line-height: 40px;
             background-color: #fff;
             box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
@@ -193,7 +193,7 @@ header {
             .more-sub-menu {
               display: none;
               position: relative;
-              left: 0;
+              inset-inline-start: 0;
               display: none;
               li {
                 display: flex;
@@ -247,8 +247,8 @@ header {
       .navbar {
         .nav-links {
           position: fixed;
-          top: 0;
-          left: -100%;
+          inset-block-start: 0;
+          inset-inline-start: -100%;
           display: block;
           max-width: 270px;
           width: 100%;
@@ -269,7 +269,7 @@ header {
             display: block;
             .sub-menu {
               position: relative;
-              top: 0;
+              inset-block-start: 0;
               box-shadow: none;
               display: none;
               li {
@@ -335,8 +335,8 @@ header {
       .sub-menu {
         border-radius: 15px;
         img {
-          margin-top: -35px;
-          margin-left: 42px;
+          margin-block-start: -35px;
+          margin-inline-start: 42px;
           position: absolute;
         }
         li {
@@ -353,8 +353,8 @@ header {
         }
         .more-sub-menu {
           position: absolute;
-          top: 0;
-          left: 100%;
+          inset-block-start: 0;
+          inset-inline-start: 100%;
           border-radius: 0 4px 4px 4px;
           z-index: 1;
           display: none;
@@ -383,7 +383,7 @@ header {
     .input-box {
       position: absolute;
       right: calc(100% - 40px);
-      top: 80px;
+      inset-block-start: 80px;
       height: 60px;
       width: 300px;
       background: #3e8da8;
@@ -404,7 +404,7 @@ header {
 
   .endIcons {
     .clipboard {
-      padding-left: 36px;
+      padding-inline-start: 36px;
       @media only screen and (max-width: 600px) and (min-width: 320px) {
         padding-left: 0;
       }
@@ -495,8 +495,8 @@ main {
               button {
                 &.owl-next {
                   position: absolute;
-                  right: 0;
-                  left: auto;
+                  inset-inline-end: 0;
+                  inset-inline-start: auto;
                   background: aliceblue;
                   padding: 17px 17px !important;
                   border: 1px solid #dfdcdc;
@@ -561,9 +561,9 @@ main {
         .section-02-title {
           display: flex;
           align-items: center;
-          margin-top: -58px;
+          margin-block-start: -58px;
           @media only screen and (max-width: 600px) and (min-width: 320px) {
-            margin-top: -46px;
+            margin-block-start: -46px;
             justify-content: center;
           }
 
@@ -614,15 +614,15 @@ main {
   }
   .section-03 {
     border-top: 5px solid #7a0a2a;
-    margin-top: 50px;
+    margin-block-start: 50px;
     .containerSection {
       @include containerSection();
       .section-00-title {
         display: flex;
         align-items: center;
-        margin-top: -32px;
+        margin-block-start: -32px;
         @media only screen and (max-width: 600px) and (min-width: 320px) {
-          margin-top: -19px;
+          margin-block-start: -19px;
           justify-content: center;
         }
         span {
